# OOP_indie_studio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  bomberman.sln  bomberman.vcxproj  bomberman.vcxproj.filters  cmake_install.cmake  test.txt
Assets/: Crate1.mtl  blooper.b3d  bob-omb.b3d  bomberman.b3d  bomberman_m2.mtl  plan.b3d  star.b3d
Headers/: Bindable.hpp  Bindable.inl  Core.hpp  GameManager.h  Scene.hpp  SoundManager.h
Headers/AI/: AI.h  Astar.h  Node.h
Headers/Bindable/: Bindable.hpp  Bindable.inl  IBindable.h  IBindable.hpp
Headers/Components/: Animator.h  Button.h  Collider.h  Collision.h  Cube.h  Drawable.h  Image.h  Moveable.h  Player.h  PlayerAI.h  Position.h  Sound.h  SoundManager.h  Text.h  Timer.h  Transform.h
Headers/ECS/: Component.h  ECS.h  Entity.h  EntityManager.h  Hash.h  System.h  Time.h
Headers/InputManager/: InputManager.h  InputManager.hpp  InputManager.inl
Headers/Map/: Generation.h  Map.h
Headers/SafeContainer/: SafeQueue.hpp  SafeQueue.inl
Headers/Scenes/: GameScene.hpp  LunchGame.hpp  MenuScene.hpp  Scene.hpp  VictoryScene.hpp
Headers/Thread/: ITask.hpp  Thread.h  Thread.hpp  Thread.inl  ThreadPool.hpp  ThreadPoolExpcetion.hpp
Sources/: GameManager.cpp  InputManager.cpp  Map.cpp  Map.hpp  Scene.cpp  SoundManager.cpp  Thread.cpp  main.cpp
Sources/AI/: AI.cpp  Astar.cpp  Node.cpp
Sources/Components/: Animator.cpp  Button.cpp  Collider.cpp  Collision.cpp  Cube.cpp  Drawable.cpp  Image.cpp  Moveable.cpp  Player.cpp  PlayerAI.cpp  Position.cpp  Sound.cpp  SoundManager.cpp  Text.cpp  Timer.cpp  Transform.cpp
(+48 files in other folders)
